fix ul align

--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,7 @@ footer p,
 footer a {
     font-size: 13px;
 }
+
+ul{
+    text-align: left;
+}
